--- a/public/front/css/style.css
+++ b/public/front/css/style.css
@@ -604,7 +604,7 @@ body {
   width: 20%;
   font-size: 22px;
   border-radius: 10px;
-  padding: 20px 0px 20px 0px; 
+  padding: 20px 0px 20px 0px;
   margin-top: 40px;
   color: white;
 }
@@ -663,7 +663,7 @@ body {
   width: 20%;
   font-size: 22px;
   border-radius: 10px;
-  padding: 20px 0px 20px 0px; 
+  padding: 20px 0px 20px 0px;
   margin-top: 10px;
   color: white;
 }
@@ -725,7 +725,7 @@ body {
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 30px;
-  margin: 0px 30px 40px 45px; 
+  margin: 0px 30px 40px 45px;
   box-shadow: 2px 2px 5px 5px #e7e6e6;
 }
 
@@ -735,7 +735,7 @@ body {
   padding-left: 0;
   padding-right: 0;
   padding-bottom: 30px;
-  margin: 0px 0px 40px 0px; 
+  margin: 0px 0px 40px 0px;
   box-shadow: 2px 2px 5px 5px #e7e6e6;
 }
 
@@ -770,7 +770,7 @@ body {
 #contact .container .call .icons i:hover{
   transform: translate(0,-10px);
   -webkit-transform: translate(0,-10px);
-  -o-transform: translate(0,-10px); 
+  -o-transform: translate(0,-10px);
   -moz-transform: translate(0,-10px);
   transition-delay: 0.1s;
   transition-duration: 0.5s;
@@ -833,7 +833,7 @@ body {
 #contact .container form button{
   font-size: 20px;
   border-radius: 10px;
-  padding: 10px 40px 10px 40px; 
+  padding: 10px 40px 10px 40px;
   margin-top: 5px;
   background-color: darkred;
   color: white;
@@ -891,7 +891,7 @@ body {
 #article .container .icons i:hover{
   transform: translate(0,-10px);
   -webkit-transform: translate(0,-10px);
-  -o-transform: translate(0,-10px); 
+  -o-transform: translate(0,-10px);
   -moz-transform: translate(0,-10px);
   transition-delay: 0.1s;
   transition-duration: 0.5s;
@@ -983,5 +983,13 @@ body {
   margin-right: auto;
 }
 
-/*****************************************************************/
 
+ .pagination {
+    /* display: -webkit-box; */
+    display: -ms-flexbox;
+    display: flex;
+    padding-left: 500px;
+    list-style: none;
+    border-radius: .25rem;
+    text-align: center;
+/*****************************************************************/
